# asgard-custom

./: .dockerignore  .gitignore  README.md  install.ps1  install.sh  package.json  pyproject.toml  tsconfig.json
.asgard/: .gitignore  classify.jsonl
.asgard/map/: GRAPH.md  INDEX.md  PROJECT.md  memory.md  orchestrator.md
.github/workflows/: ci.yml  release.yml
archive/asgard-studio/: README.md
archive/freyja-before-rebuild-20260722/: README.md
archive/freyja-before-rebuild-20260722/skill_plugins/21st-dev/: plugin.json
archive/freyja-before-rebuild-20260722/skill_plugins/aceternity-ui/: plugin.json
archive/freyja-before-rebuild-20260722/skill_plugins/asgard-freyja-restraint/: plugin.json
archive/freyja-before-rebuild-20260722/skill_plugins/design-dna/: plugin.json
archive/freyja-before-rebuild-20260722/skill_plugins/emil-design-engineering/: plugin.json
archive/freyja-before-rebuild-20260722/skill_plugins/freyja-logo-workflows/: plugin.json
benchmarks/: project_memory_projection.py
benchmarks/hybrid-search/: REPORT.md  harness.py  results.jsonl
benchmarks/norn-evolution/: harness.py  results.jsonl
benchmarks/shortcut-recall/: REPORT.md  harness.py  results-36runs.jsonl
desktop/: README.md  package-lock.json  package.json
desktop/frontend/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docker/: Dockerfile  devbox.Dockerfile  devbox.sh  sandbox-test.sh  sandbox.sh
docker/asgard-common-memory/: .env.example  README.md  backup.sh  docker-compose.yml
docker/asgard-common-memory2/: .env.example  .gitignore  Dockerfile  README.md  backup.sh  docker-compose.yml  doctor.sh  e2e.sh  install.sh  litellm.env.example  llm-benchmark.py  provider-readiness.py  pyproject.toml  restore.sh  runtime.sh
docker/asgard-common-memory2/fixtures/: asgard-project.owl  e2e-project.md
docker/asgard-project-memory/: .env.example  README.md  backup.sh  docker-compose.yml
ref/: skill-context-report-0.6.12.html  skill-context-report-0.6.13.html
scripts/: release-build.sh
src/: cli.ts  templates.ts
src/asgard/: __init__.py  __main__.py  charter.py  cli.py  code_map.py  evolution.py  evolution_bench.py  failures.py  i18n.py  io_journal.py  lagom.py  map_context.py  memory.py  memory_bridge.py  memory_context.py  memory_semantic.py  openai_codex.py  picker.py  platform.py  project_memory.py  providers.py  registry.py  sandbox.py  settings.py  skill_bank.py  skill_curator.py  skill_registry.py  theme.py  tui.py  ui.py
src/asgard/agent/: __init__.py  claude_native.py  episodes.py  heimdall.py  onboard.py  oneshot.py  prompt_cache.py  rate_limit.py  repl.py  session.py  tool_kernel.py  tools.py  tui.py  turn_store.py  unit_workspace.py
src/asgard/agent/heimdall/: __init__.py  classify.py  (+8 more)
src/asgard/agents/: __init__.py  asgard-verifier.md  asgard-worker.md
src/asgard/assets/: desktop.html  memory_dashboard.html  plan_dashboard.html  studio_dashboard.html
src/asgard/commands/: auth.py  completions.py  desktop.py  doctor.py  evolve.py  init_tui.py  map.py  memory.py  memory_dashboard.py  role.py  setup.py  skills.py  start.py  studio.py  sync.py  tools.py  uninstall.py  update.py  upgrade.py
src/asgard/hooks/: __init__.py  charter_activate.py  cursor_failure_tracker.py  cursor_git_guard.py  failure_tracker.py  git_guard.py  lagom_activate.py  lagom_subagent.py  lagom_tracker.py  map_activate.py  memory_activate.py  quest_log.py  readonly_guard.py  release_guard.py  route_hint.py  secret_guard.py  subagent_gate.py  unattended_context.py  verifier_gate.py  write_sentinel.py
src/asgard/map_graph/: __init__.py  bridge.py  evidence.py  extract_java.py  extract_python.py  extract_tsjs.py  graph.py  spring_props.py  view.py  view_legacy.py
src/asgard/memory/: __init__.py  index.py  norn.py  okf.py  pages.py  policy.py  recall.py  store.py
src/asgard/memory_bridge/: __init__.py  client.py  config.py  server.py  trust.py
src/asgard/project_memory/: __init__.py  canonical.py  projection.py  records.py  retain.py  scan.py
src/asgard/project_memory_backends/: __init__.py
src/asgard/providers/: __init__.py
src/asgard/templates/: __init__.py  agent_models.py  agents.py  bridge.py  canon.py  claude.py  codex.py  cursor.py  eitri.py  freyja.py  guards.py  lagom.py  map.py  memory.py  mimir.py  seal.py  selftest.py  skill_router.py  thor.py  trinity.py  worker.py
test/: e2e_trinity.sh  smoke.sh  test_agent.py  test_theme.py  test_trinity.py  test_tui.py
tests/: e2e_trinity.sh  smoke.sh  smoke_pt_session.py  test_adversarial_gate.py  test_agent.py  test_architecture.py  test_bench_fixtures.py  test_bridge.py  test_cancellation.py  test_charter.py  test_charter_hook.py  test_claude_native.py  test_code_map.py  test_completions.py  test_design_dna.py  test_design_md_usage.py  test_desktop.py  test_document_tools.py  test_eitri.py  test_episodes.py  test_evolution.py  test_failures.py  test_freyja.py  test_heimdall.py  test_instruction_compiler_skill.py  test_io_journal.py  test_lagom.py  test_logo_workflows.py  test_map_context.py  test_map_graph.py  test_memory.py  test_memory_bridge.py  test_memory_dashboard.py  test_memory_norn.py  test_mimir.py  test_motion_skill_stack.py  test_native_utility_tools.py  test_openai_api.py  test_openai_native.py  test_picker.py  (+28 more)
tests/fixtures/bench-cc/: adversarial.sh
(+1361 files in other folders)
