[project]
name = "asgard"
description = "Asgard — make anything, your way. curl-installable CLI."
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "textual>=0.60",  # full-screen onboarding TUI (asgard init); pure-python, builds on rich
    "anthropic>=0.60",
    "openai>=1.40",
    "claude-agent-sdk>=0.2",  # claude-native provider — 로컬 claude CLI 구동 (claude_cli 트랜스포트)
    "prompt-toolkit>=3.0",
]

# curl|bash install path: `uv tool install asgard` exposes this console script.
[project.scripts]
asgard = "asgard.cli:app"

# 개발 도구 (PEP 735) — `uv sync` 기본 포함, 배포 wheel 에는 안 들어감.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",  # 커버리지 가시화 — 게이트 아님, 공백이 파이프라인에 보이게만 (CI --cov)
    "ruff>=0.8",
    "ty>=0.0.56",
]

# 구조 현대화 뼈대 — lint·format 은 ruff 로 통일.
[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle · pyflakes · isort — 최소 셋부터
ignore = ["E501"]  # 포매터 병용 시 공식 권장 — 장문 템플릿 문자열은 포매터도 못 접음

[tool.pytest.ini_options]
testpaths = ["tests"]

# 타입체크 — ty 베타 채택, 문제 시 mypy 폴백. ref/·workspace/ 는 .gitignore 로 자동 제외.
[tool.ty.environment]
python-version = "3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version — hardcoded in __init__ (frozen-safe; no importlib.metadata).
[tool.hatch.version]
path = "src/asgard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/asgard"]
artifacts = ["src/asgard/assets/*.png"]  # 로고 lockup — REPL 배너 이미지(kitty/iterm), 기본 .py-only 를 덮어 포함
