[project]
name = "asgard"
description = "Asgard — make anything, your way. curl-installable CLI."
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "textual>=0.60",  # full-screen onboarding TUI (asgard init); pure-python, builds on rich
    "anthropic>=0.60",
    "openai>=1.40",
    "httpx>=0.27",  # Asgard-owned OAuth device flow + refresh for subscription providers
    "claude-agent-sdk>=0.2",  # claude-native provider — 로컬 claude CLI 구동 (claude_cli 트랜스포트)
    "prompt-toolkit>=3.0",
    "pypdf>=6.14.2",  # native PDF text extraction
    "python-hwpx>=3.5.0",  # HWPX parsing/editing for the bundled Korean document skill
    "pyyaml>=6.0.3",  # built-in DESIGN.md Python linter
    "coloraide>=8.10",  # CSS color parsing + WCAG contrast for DESIGN.md
]

# 옵트인 시맨틱 검색 (1차 메모리 3번째 RRF 스트림) — 미설치면 lexical 2경로로 fail-open.
# 기본 의존성에 넣지 않는다: torch 무의존 경량(model2vec)이라도 기본 설치는 제로 의존 원칙 유지.
[project.optional-dependencies]
semantic = ["model2vec>=0.8"]

# curl|bash install path: `uv tool install asgard` exposes this console script.
[project.scripts]
asgard = "asgard.cli:app"

# 개발 도구 (PEP 735) — `uv sync` 기본 포함, 배포 wheel 에는 안 들어감.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",  # 커버리지 가시화 — 게이트 아님, 공백이 파이프라인에 보이게만 (CI --cov)
    "ruff>=0.8",
    "ty>=0.0.56",
    "model2vec>=0.8",  # 시맨틱 스트림 dev 실검증·벤치용 — 배포 기본엔 불포함 (extra: semantic)
]

# 구조 현대화 뼈대 — lint·format 은 ruff 로 통일.
[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["src/asgard/assets/skill_plugins/**"]  # vendored resource snapshots retain upstream bytes

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle · pyflakes · isort — 최소 셋부터
ignore = ["E501"]  # 포매터 병용 시 공식 권장 — 장문 템플릿 문자열은 포매터도 못 접음

[tool.pytest.ini_options]
testpaths = ["tests"]

# 타입체크 — ty 베타 채택, 문제 시 mypy 폴백. ref/·workspace/ 는 .gitignore 로 자동 제외.
[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["src/asgard/assets/skill_plugins/**"]  # vendored resource snapshots retain upstream bytes

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version — hardcoded in __init__ (frozen-safe; no importlib.metadata).
[tool.hatch.version]
path = "src/asgard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/asgard"]
exclude = ["**/__pycache__/**", "**/*.pyc"]
artifacts = [
  "src/asgard/assets/*.png",
  "src/asgard/assets/*.html",
  "src/asgard/assets/container_kit/**",  # cross-platform Docker/Podman runtime
  "src/asgard/assets/sandbox_kit/**",  # Docker Sandboxes custom-agent kit
  "src/asgard/assets/skill_plugins/**",  # 내장 리소스 스킬 (예: ui-ux-pro-max)
]  # 로고 lockup + local app HTML + built-in resources, 기본 .py-only 를 덮어 포함
